change default namespace

--- a/templates/home/horizontal.html.twig
+++ b/templates/home/horizontal.html.twig
@@ -10,13 +10,13 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    <a class="has-text-black mr-5" href="{{ path(constant('App\\Controller\\HomeController::ROUTE_HOME')) }}"><i class="fa fa-home"></i></a>
+                    <a class="has-text-black mr-5" href="{{ path(constant('Cadrien\\BulmaBridge\\Controller\\HomeController::ROUTE_HOME')) }}"><i class="fa fa-home"></i></a>
                     Horizontal
                 </h1>
                 <h2 class="subtitle">
                     Exemples de formulaire horizontal
                 </h2>
-                <a class="button is-link is-light" href="{{ path(constant('App\\Controller\\HomeController::ROUTE_EXAMPLE_LAYOUT')) }}">Voir la version layout</a>
+                <a class="button is-link is-light" href="{{ path(constant('Cadrien\\BulmaBridge\\Controller\\HomeController::ROUTE_EXAMPLE_LAYOUT')) }}">Voir la version layout</a>
             </div>
         </div>
     </section>
