--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -55,7 +55,7 @@ paths:
 form_themes: [ 'Resources/views/form/bulma_1_layout.html.twig' ]
                             </xmp>
                         </code>
-                        <a class="button is-link" href="{{ path(constant('App\\Controller\\HomeController::ROUTE_EXAMPLE_LAYOUT')) }}">Voir le rendu</a>
+                        <a class="button is-link" href="{{ path(constant('Cadrien\\BulmaBridge\\Controller\\HomeController::ROUTE_EXAMPLE_LAYOUT')) }}">Voir le rendu</a>
                     </div>
                     <div class="column">
                         <h4 class="subtitle">Horizontal</h4>
@@ -67,7 +67,7 @@ paths:
 form_themes: [ 'Resources/views/form/bulma_1_horizontal_layout.html.twig' ]
                             </xmp>
                         </code>
-                        <a class="button is-link" href="{{ path(constant('App\\Controller\\HomeController::ROUTE_EXAMPLE_HORIZONTAL')) }}">Voir le rendu</a>
+                        <a class="button is-link" href="{{ path(constant('Cadrien\\BulmaBridge\\Controller\\HomeController::ROUTE_EXAMPLE_HORIZONTAL')) }}">Voir le rendu</a>
                     </div>
                 </div>
             </div>
