--- a/templates/home/layout.html.twig
+++ b/templates/home/layout.html.twig
@@ -8,13 +8,13 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    <a class="has-text-black mr-5" href="{{ path(constant('App\\Controller\\HomeController::ROUTE_HOME')) }}"><i class="fa fa-home"></i></a>
+                    <a class="has-text-black mr-5" href="{{ path(constant('Cadrien\\BulmaBridge\\Controller\\HomeController::ROUTE_HOME')) }}"><i class="fa fa-home"></i></a>
                     Layout
                 </h1>
                 <h2 class="subtitle">
                     Exemples de formulaire layout
                 </h2>
-                <a class="button is-link is-light" href="{{ path(constant('App\\Controller\\HomeController::ROUTE_EXAMPLE_HORIZONTAL')) }}">Voir la version horizontale</a>
+                <a class="button is-link is-light" href="{{ path(constant('Cadrien\\BulmaBridge\\Controller\\HomeController::ROUTE_EXAMPLE_HORIZONTAL')) }}">Voir la version horizontale</a>
             </div>
         </div>
     </section>
