--- a/Resources/views/form/form_div_layout.html.twig
+++ b/Resources/views/form/form_div_layout.html.twig
@@ -307,7 +307,7 @@
         {% set class_left = attribute(form.vars, constant('App\\Form\\TextGroupType::CLASS_LEFT')) %}
     {% endif %}
     {% if class_right is not defined %}
-        {% set class_right = attribute(form.vars, constant('App\\\Form\\TextGroupType::CLASS_RIGHT')) %}
+        {% set class_right = attribute(form.vars, constant('App\\Form\\TextGroupType::CLASS_RIGHT')) %}
     {% endif %}
     {% if label_left is not null or label_right is not null %}
         <div class="control{{ label_left is not null ? ' has-icons-left' }}{{ label_right is not null ? ' has-icons-right' }}">
