--- a/Resources/views/form/bulma_1_layout.html.twig
+++ b/Resources/views/form/bulma_1_layout.html.twig
@@ -6,11 +6,11 @@
     {%- set prepend = not (money_pattern starts with '{{') -%}
     {%- set append = not (money_pattern ends with '}}') -%}
     {%- if prepend or append -%}
-        <div class="control {{- prepend ? " has-icon-left" }}{{- append ? " has-icon-right"}}">
+        <div class="control {{- prepend ? " has-icons-left" }}{{- append ? " has-icons-right"}}">
+            {{- block('form_widget_simple') -}}
             {%- if prepend -%}
                 <span class="icon is-small is-left">{{ money_pattern|form_encode_currency }}</span>
             {%- endif -%}
-            {{- block('form_widget_simple') -}}
             {%- if append -%}
                 <span class="icon is-small is-right">{{ money_pattern|form_encode_currency }}</span>
             {%- endif -%}
